--- a/ClienteWeb/index.html
+++ b/ClienteWeb/index.html
@@ -28,6 +28,7 @@
 		<a class="inicio-sesion" href="#"><button>Iniciar Sesión</button></a>
 	</header>
 
+	<!-- Modal content 
 	<div class="padre">
 
 		<a href="#" class="btn-flotante">GAS2</a>
@@ -36,7 +37,7 @@
 
 
 
-	</div>
+	</div> -->
 
 
 	<div id="map"></div>
@@ -48,7 +49,7 @@
 			<span class="close">&times;</span>
 			<div class="contenido"> <!-- Esto es el CONTENIDO de la pagina -->
 				<div class="primeraColumna">
-					<p style="font-weight: 700">Esto es la primera columna</p>
+					<p style="font-weight: 700"></p>
 					<br>
 					<p id="IDSensor">ID del Sensor:</p>
 					<br>
@@ -57,7 +58,7 @@
 					<p id="Longitud">Longitud:</p>
 				</div>
 				<div class="segundaColumna">
-					<p style="font-weight: 700">Esto es la segunda columna</p>
+					<p style="font-weight: 700"></p>
 					<br>
 					<p id="NumSerie">Numero de Serie:</p>
 					<br>
