--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -242,7 +242,7 @@
 		<div id="map"></div>
 	
 	<script src="js/mapa.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRSSIm-4PpXMn23vNcaPQKbqCnRvMN9Ww&libraries=visualization&callback=initMap"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRSSIm-4PpXMn23vNcaPQKbqCnRvMN9Ww&libraries=visualization&callback=initMap"></script>
 	
 	<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script><!-- Conectamos con Firestore -->
@@ -257,7 +257,9 @@
                 messagingSenderId: "765295987499",
             };
             firebase.initializeApp(firebaseConfig);
-        </script>
+		</script>
+			<p><a href="informacion.html" class="btn btn-primary btn-outline">Leer más</a></p>
+
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="scripts.js"></script>
