--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -76,7 +76,7 @@
 
 	</head>
 
-<body onload="getMediciones()">
+<body onload="getMediciones(); markerUbicacion()">
 
 
 
@@ -351,6 +351,8 @@
 	<script src="js/jquery.countTo.js"></script>
 
 	<script src="js/popUpInfoSensor.js"></script>
+    
+    <script src="js/markerUbicacion.js"></script>
 
 
 
