--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -94,6 +94,9 @@
 					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
 						Elegir intervalo de tiempo
 					</a></li>
+					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#myModal" onclick="getInfoMiSensor()">
+						Mi sensor
+					</a></li>
 					<li><a href="informacion.html">Información</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
@@ -276,10 +279,6 @@
 		<div id="fh5co-main">
 			<div id="map"></div>
 
-
-			<button id="popup" type="button" class="btn-flotante" data-toggle="modal" data-target="#myModal">
-				MiSensor
-			</button>
 
 			<!-- Central Modal Medium Info -->
 			<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
