Intento de Scraping, Enviar correo por JS y PHP

--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -116,6 +116,9 @@
             </div>
         </div>
     </div>
+    <div>
+        <button onClick="iniciarScraping()">Hola</button>
+    </div>
     </div>
     </div>
     
@@ -157,6 +160,7 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
+	<script src="js/scraping.js"></script>
     
 </body>
 </html>
