Codigo Scrapping ready (sin descargar libreria)

--- a/ClienteWeb/INODOS/index.html
+++ b/ClienteWeb/INODOS/index.html
@@ -426,6 +426,9 @@
     <?php
     include("scraping.php");
     ?>
+     <!-- SCRAPING JS -->
+     <script src="js/scraping.js"></script>
+
 
 </body>
 
