--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div>
-        <button onClick="iniciarScraping()">Hola</button>
+        <canvas id="lineChart" style="padding: 50px;"></canvas>
     </div>
     </div>
     </div>
@@ -160,7 +160,10 @@
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
-	<script src="js/scraping.js"></script>
+    <script src="js/scraping.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> <!-- Esto debe ir antes de meter la clase de miSensor -->
+    <script src="js/miSensor.js"></script>
+    
     
 </body>
 </html>
