--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -89,6 +89,8 @@
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
+					<li><a href="login_y_Registro.html">Iniciar Sesión</a></li>
+
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
 					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
