--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -39,7 +39,7 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_Verde.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-                    <li><a href="login_y_Registro.html">Iniciar Sesión</a></li>
+                    <li><a href="login.html">Iniciar Sesión</a></li>
 
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="mapa.html">Mapa</a></li>
