--- a/ClienteWeb/INODOS/index.html
+++ b/ClienteWeb/INODOS/index.html
@@ -78,7 +78,7 @@
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="login_y_Registro.html">Iniciar Sesión</a></li>
+					<li><a href="login.html">Iniciar Sesión</a></li>
 					<li class="fh5co-active"><a href="index.html">Home</a></li>
 					<li><a href="mapa.html">Mapa</a></li>
 					<li><a href="informacion.html">Información</a></li>
