--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -89,7 +89,7 @@
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-					<li><a href="login_y_Registro.html">Iniciar Sesión</a></li>
+					<li><a href="login.html">Iniciar Sesión</a></li>
 
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
@@ -117,26 +117,15 @@
 
 		</aside>
 
-		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog" aria-labelledby="intervalModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-			  <div class="modal-content">
-				<div class="modal-header">
-				  <h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
-				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				  </button>
-				</div>
-				<div class="modal-body">
-				  <input type="date" id="fechaInicio" class="form-control">
-				  <input type="date" id="fechaFin" class="form-control">
-				</div>
-				<div class="modal-footer">
-				  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-				  <button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()" class="btn btn-primary">Obtener</button>
-				</div>
-			  </div>
-			</div>
-		  </div>
+		
+
+
+
+
+
+
+
+		  <div id="map"></div>
 
 		<!--
 
@@ -276,25 +265,42 @@
 				</div>
 			</div>
 		</div>
-		-->
 
-		<div id="fh5co-main">
-			<div id="map"></div>
 
+				-->			
+
+		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog" aria-labelledby="intervalModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
+				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+				<div class="modal-body">
+				  <input type="date" id="fechaInicio" class="form-control">
+				  <input type="date" id="fechaFin" class="form-control">
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+				  <button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()" class="btn btn-primary">Obtener</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		
 
 			<!-- Central Modal Medium Info -->
-			<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-				aria-hidden="true" style="z-index: 2000;">
-				<div class="modal-dialog modal-notify modal-info" role="document">
+			<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" style="z-index: 2000;"
+				aria-hidden="true">
+				<div class="modal-dialog" role="document">
 					<!--Content-->
 					<div class="modal-content">
 						<!--Header-->
 						<div class="modal-header">
-							<p class="heading lead">Información</p>
-
-							
+							<p class="heading lead">Información</p>	
 						</div>
-
 						<!--Body-->
 						<div class="modal-body">
 							<div class="text-center">
@@ -309,7 +315,6 @@
 								  <input id="Valor" readonly type="text" class="form-control">
 							</div>
 						</div>
-
 						<!--Footer-->
 						<div class="modal-footer justify-content-center">
 							<a href="miSensor.html" type="button" class="btn btn-primary">+INFO<i class="far fa-gem ml-1 text-white"></i></a>
@@ -350,9 +355,6 @@
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 			<script src="scripts.js"></script>
 			<script src="js/firebase.js"></script>
-
-
-		</div>
 
 	</div>
 
