añado nuevo inicio landing y arreglo titulo

--- a/ClienteWeb/INODOS/index.html
+++ b/ClienteWeb/INODOS/index.html
@@ -215,8 +215,9 @@
 			
 			-->
 			
-			
-			<h1 class="titulo">INODOS</h1>
+				<h1 class="titulo">INODOS</h1>
+	
+				<img src="images/pollution.jpg" alt="Free HTML5 Bootstrap Template" class="home-principal">
 			
 			<div class="estilo1">
 				
