--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -30,7 +30,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body onload="getInfoMiSensor()">
+<body onload="getInfoMiSensor(); dibujarGraficaConUltimas5Mediciones()">
     <div id="fh5co-page">
     
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
@@ -72,14 +72,14 @@
     <div class="contenido"> <!-- Esto es el CONTENIDO de la pagina -->
         <div class="primeraColumna">
             <div class="caja">
-              <img src="./recursos/location.png" alt="">
+              <img src="./images/location.png" alt="">
               <br>
               <p style="font-weight: 700">Latitud:</p>
                <p id="Latitud"></p>
             </div>
             <br>
             <div class="caja">
-               <img src="./recursos/location.png" alt="">
+               <img src="./images/location.png" alt="">
                <br>
                <p style="font-weight: 700">Longitud:</p>
                 <p id="Longitud"></p>
@@ -87,14 +87,14 @@
         </div>
         <div class="segundaColumna">
            <div class="caja">
-              <img src="./recursos/numeroSerie.png" alt="">
+              <img src="./images/numeroSerie.png" alt="">
               <br>
               <p style="font-weight: 700">Numero de serie:</p>
                <p id="NumSerie"></p>
            </div>
             <br>
             <div class="caja">
-               <img src="./recursos/momento.png" alt="">
+               <img src="./images/momento.png" alt="">
                <br>
                <p style="font-weight: 700">Momento Unix:</p>
                 <p id="MomentoUnix"></p>
@@ -102,14 +102,14 @@
         </div>
            <div class="terceraColumna">
            <div class="caja">
-              <img src="./recursos/idsensor.png" alt="">
+              <img src="./images/idsensor.png" alt="">
               <br>
               <p style="font-weight: 700">ID del Sensor:</p>
                <p id="IDSensor"></p>
            </div>
             <br>
             <div class="caja">
-               <img src="./recursos/valor.png" alt="">
+               <img src="./images/valor.png" alt="">
                <br>
                <p style="font-weight: 700">Valor:</p>
                 <p id="Valor"></p>
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div>
-        <canvas id="lineChart" style="padding: 50px;"></canvas>
+        <canvas id="lineChart" style="padding: 50px;" onload="getUltimas5Mediciones()"></canvas>
     </div>
     </div>
     </div>
