--- a/ClienteWeb/INODOS/registro.html
+++ b/ClienteWeb/INODOS/registro.html
@@ -47,7 +47,7 @@
 			<label>Nombre</label>
 			<div class="group">
 				<i class="fas fa-user"></i>
-				<input type="text" class="form-control" placeholder="Nombre" required="required" id="nombre" />
+				<input type="text" class="form-control" placeholder="Nombre" required="required" id="nombre"/>
 			</div>
 		</div>
 
@@ -78,7 +78,7 @@
 		<div class="forgot">
 			<a href="login.html">Iniciar Sesión</a>
 		</div>
-		<button onclick="registrarse()" type="button" id="btn-iniciarSesion">Registrarse</button>
+		<button onclick="registrarse()" type="submit" id="btn-iniciarSesion">Registrarse</button>
 	</form>
 </div>
 <footer>
