--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -319,9 +319,9 @@
 			</div>
 
 			<div class="botonesGases">
-				<button type="button" id="btn_NO2" onclick="getMediciones()" class="btn btn-success">NO2</button>
+				<button type="button" id="btn_NO2" onclick="vaciarYNO2()" class="btn btn-success">NO2</button>
 				<button type="button" id="btn_SO2" onclick="medidasSO2()" class="btn btn-success">SO2</button>
-				<button type="button" id="btn_CO" onclick="medidasSO2()" class="btn btn-success">CO</button>
+				<button type="button" id="btn_CO" onclick="medidasCO()" class="btn btn-success">CO</button>
 			</div>
 
 
