--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -89,7 +89,6 @@
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
 					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
@@ -116,10 +115,26 @@
 
 		</aside>
 
-		<div id="map"></div>
-
-
-		
+		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog" aria-labelledby="intervalModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
+				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				  </button>
+				</div>
+				<div class="modal-body">
+				  <input type="date" id="fechaInicio" class="form-control">
+				  <input type="date" id="fechaFin" class="form-control">
+				</div>
+				<div class="modal-footer">
+				  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+				  <button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()" class="btn btn-primary">Obtener</button>
+				</div>
+			  </div>
+			</div>
+		  </div>
 
 		<!--
 
@@ -261,31 +276,8 @@
 		</div>
 		-->
 
-
-		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog" aria-labelledby="intervalModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-			  <div class="modal-content">
-				<div class="modal-header">
-				  <h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
-				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				  </button>
-				</div>
-				<div class="modal-body">
-				  <input type="date" id="fechaInicio" class="form-control">
-				  <input type="date" id="fechaFin" class="form-control">
-				</div>
-				<div class="modal-footer">
-				  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-				  <button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()" class="btn btn-primary">Obtener</button>
-				</div>
-			  </div>
-			</div>
-		  </div>
-
-
-
-
+		<div id="fh5co-main">
+			<div id="map"></div>
 
 			<!-- Central Modal Medium Info -->
 			<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
@@ -326,7 +318,11 @@
 				</div>
 			</div>
 
-
+			<div class="botonesGases">
+				<button type="button" id="btn_NO2" onclick="vaciarYNO2()" class="btn btn-success">NO2</button>
+				<button type="button" id="btn_SO2" onclick="medidasSO2()" class="btn btn-success">SO2</button>
+				<button type="button" id="btn_CO" onclick="medidasCO()" class="btn btn-success">CO</button>
+			</div>
 
 
 			<script src="js/mapa.js"></script>
@@ -349,14 +345,16 @@
 				};
 				firebase.initializeApp(firebaseConfig);
 			</script>
-			<p><a href="informacion.html" class="btn btn-primary btn-outline">Leer más</a></p>
+			
 
 
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 			<script src="scripts.js"></script>
 			<script src="js/firebase.js"></script>
+			<script src="js/mapa.js"></script>
 
 
+		</div>
 
 	</div>
 
