--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -31,7 +31,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body onload="getInfoMiSensor(); dibujarGraficaConUltimas5Mediciones()">
+<body onload="getInfoMiSensor(); dibujarGraficaConUltimas5Mediciones(); obtenerMediaUltimasHoras()">
     <div id="fh5co-page">
     
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
