Añadida la visualización de la interpolación en la mapa

--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -76,7 +76,7 @@
 
 	</head>
 
-<body onload="getMediciones(); markerUbicacion()">
+<body onload="getImagenDelMapa(); getMediciones(); markerUbicacion()">
 
 
 
@@ -332,6 +332,7 @@
 
 			<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
 			<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
+			<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-storage.js"></script>
 			<!-- Conectamos con Firestore -->
 
 			<script>
@@ -349,7 +350,7 @@
 
 
 			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-			<script src="scripts.js"></script>
+			<!--<script src="scripts.js"></script>-->
 			<script src="js/firebase.js"></script>
 			<script src="js/mapa.js"></script>
 
