--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -86,7 +86,7 @@
                 <img src="./images/location.png" alt="">
                 <br>
                 <p style="font-weight: 700">Media Estación:</p>
-                    <p id=""></p>
+                    <p id="Media"></p>
                 </div>
             </div>
             <div class="segundaColumna">
