--- a/ClienteWeb/INODOS/informacion.html
+++ b/ClienteWeb/INODOS/informacion.html
@@ -64,7 +64,7 @@
 	<![endif]-->
 
 	</head>
-	<body>
+	<body onload="administrarBarraLateral()">
 
 	<div id="fh5co-page">
 
@@ -74,11 +74,13 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_Verde.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="mapa.html">Mapa</a></li>
-					<li class="fh5co-active"><a href="informacion.html">Información</a></li>
-					<li><a href="contacto.html">Contacto</a></li>
+                    <li id="btn_iniciar_sesion"><a href="login.html">Iniciar Sesión</a></li>
+                    <li onclick="cerrarSesion()" id="btn_cerrar_sesion" hidden><a href="#">Cerrar Sesión</a></li>
+                    <li class="fh5co-active"><a href="index.html">Home</a></li>
+                    <li><a href="mapa.html">Mapa</a></li>
+                    <li hidden id="btn_mi_sensor"><a href="miSensor.html">Mi Sensor</a></li>
+                    <li><a href="informacion.html">Información</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</nav>
 
@@ -310,6 +312,7 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	
+	<script src="js/sesion.js"></script>
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
