--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -69,6 +69,8 @@
 
 		<!-- Modernizr JS -->
 		<script src="js/modernizr-2.6.2.min.js"></script>
+		<script src="js/markerUbicacion.js"></script>
+
 		<!-- FOR IE9 below -->
 		<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -76,7 +78,7 @@
 
 	</head>
 
-<body onload="getMediciones(); markerUbicacion()">
+<body onload=" administrarBarraLateral(); getMediciones(); markerUbicacion()">
 
 
 
@@ -89,15 +91,17 @@
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
+					<li id="btn_iniciar_sesion"><a href="login.html">Iniciar Sesión</a></li>
+					<li onclick="cerrarSesion()" id="btn_cerrar_sesion" hidden><a href="#">Cerrar Sesión</a></li>
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
 					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
-						Elegir intervalo de tiempo
-					</a></li>
-					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#myModal" onclick="getInfoMiSensor()">
-						Mi sensor
-					</a></li>
+							Elegir intervalo de tiempo
+						</a></li>
+					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#myModal"
+							onclick="getInfoMiSensor()">
+							Mi sensor
+						</a></li>
 					<li><a href="informacion.html">Información</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
@@ -119,7 +123,7 @@
 		<div id="map"></div>
 
 
-		
+
 
 		<!--
 
@@ -262,99 +266,102 @@
 		-->
 
 
-		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog" aria-labelledby="intervalModalLabel" aria-hidden="true">
+		<div class="modal" id="intervalModal" style="z-index: 2000;" tabindex="-1" role="dialog"
+			aria-labelledby="intervalModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
-			  <div class="modal-content">
-				<div class="modal-header">
-				  <h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
-				  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				  </button>
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="intervalModalLabel">Elegir intervalo</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<input type="date" id="fechaInicio" class="form-control">
+						<input type="date" id="fechaFin" class="form-control">
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+						<button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()"
+							class="btn btn-primary">Obtener</button>
+					</div>
 				</div>
-				<div class="modal-body">
-				  <input type="date" id="fechaInicio" class="form-control">
-				  <input type="date" id="fechaFin" class="form-control">
-				</div>
-				<div class="modal-footer">
-				  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-				  <button type="button" id="intervalButton" onclick="aplicarIntervaloDeTiempo()" class="btn btn-primary">Obtener</button>
-				</div>
-			  </div>
 			</div>
-		  </div>
+		</div>
 
 
 
 
 
-			<!-- Central Modal Medium Info -->
-			<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-				aria-hidden="true" style="z-index: 2000;">
-				<div class="modal-dialog modal-notify modal-info" role="document">
-					<!--Content-->
-					<div class="modal-content">
-						<!--Header-->
-						<div class="modal-header">
-							<p class="heading lead">Información</p>
+		<!-- Central Modal Medium Info -->
+		<div class="modal" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+			style="z-index: 2000;">
+			<div class="modal-dialog modal-notify modal-info" role="document">
+				<!--Content-->
+				<div class="modal-content">
+					<!--Header-->
+					<div class="modal-header">
+						<p class="heading lead">Información</p>
 
-							
-						</div>
 
-						<!--Body-->
-						<div class="modal-body">
-							<div class="text-center">
-								<i class="fas fa-check fa-4x mb-3 animated rotateIn"></i>
-								<div class="input-group-prepend">
-									<span class="input-group-text">IDSensor</span>
-								  </div>
-								  <input id="IDSensor" readonly type="text" class="form-control">
-								  <div class="input-group-prepend">
-									<span class="input-group-text">Valor</span>
-								  </div>
-								  <input id="Valor" readonly type="text" class="form-control">
+					</div>
+
+					<!--Body-->
+					<div class="modal-body">
+						<div class="text-center">
+							<i class="fas fa-check fa-4x mb-3 animated rotateIn"></i>
+							<div class="input-group-prepend">
+								<span class="input-group-text">IDSensor</span>
 							</div>
-						</div>
-
-						<!--Footer-->
-						<div class="modal-footer justify-content-center">
-							<a href="miSensor.html" type="button" class="btn btn-primary">+INFO<i class="far fa-gem ml-1 text-white"></i></a>
-							<a type="button" class="btn btn-outline-primary waves-effect"
-								data-dismiss="modal">CERRAR</a>
+							<input id="IDSensor" readonly type="text" class="form-control">
+							<div class="input-group-prepend">
+								<span class="input-group-text">Valor</span>
+							</div>
+							<input id="Valor" readonly type="text" class="form-control">
 						</div>
 					</div>
-					<!--/.Content-->
+
+					<!--Footer-->
+					<div class="modal-footer justify-content-center">
+						<a href="miSensor.html" type="button" class="btn btn-primary">+INFO<i
+								class="far fa-gem ml-1 text-white"></i></a>
+						<a type="button" class="btn btn-outline-primary waves-effect" data-dismiss="modal">CERRAR</a>
+					</div>
 				</div>
+				<!--/.Content-->
 			</div>
+		</div>
 
 
 
 
-			<script src="js/mapa.js"></script>
-			<script async defer
-				src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRSSIm-4PpXMn23vNcaPQKbqCnRvMN9Ww&libraries=visualization&callback=initMap">
-			</script>
+		<script src="js/mapa.js"></script>
+		<script async defer
+			src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDRSSIm-4PpXMn23vNcaPQKbqCnRvMN9Ww&libraries=visualization&callback=initMap">
+		</script>
+		<script src=" https://www.gstatic.com/firebasejs/7.23.0/firebase-auth.js"></script>
 
-			<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-			<script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-firestore.js"></script>
-			<!-- Conectamos con Firestore -->
+		<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
+		<!-- Conectamos con Firestore -->
 
-			<script>
-				var firebaseConfig = {
-					apiKey: "AIzaSyB-X_JHudgy5sJ51PrlcgcRrIxkwFy9b8o",
-					authDomain: "basedatosproyecto3ag1.firebaseapp.com",
-					databaseURL: "https://basedatosproyecto3ag1.firebaseio.com",
-					projectId: "basedatosproyecto3ag1",
-					storageBucket: "basedatosproyecto3ag1.appspot.com",
-					messagingSenderId: "765295987499",
-				};
-				firebase.initializeApp(firebaseConfig);
-			</script>
-			<p><a href="informacion.html" class="btn btn-primary btn-outline">Leer más</a></p>
+		<script>
+			var firebaseConfig = {
+				apiKey: "AIzaSyB-X_JHudgy5sJ51PrlcgcRrIxkwFy9b8o",
+				authDomain: "basedatosproyecto3ag1.firebaseapp.com",
+				databaseURL: "https://basedatosproyecto3ag1.firebaseio.com",
+				projectId: "basedatosproyecto3ag1",
+				storageBucket: "basedatosproyecto3ag1.appspot.com",
+				messagingSenderId: "765295987499",
+			};
+			firebase.initializeApp(firebaseConfig);
+		</script>
+		<p><a href="informacion.html" class="btn btn-primary btn-outline">Leer más</a></p>
 
 
-			<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-			<script src="scripts.js"></script>
-			<script src="js/firebase.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+		<script src="scripts.js"></script>
+		<script src="js/firebase.js"></script>
 
 
 
@@ -375,9 +382,10 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 
-    <script src="js/popUpInfoSensor.js"></script>
-    <script src="js/markerUbicacion.js"></script>
+	<script src="js/popUpInfoSensor.js"></script>
 
+
+	<script src="js/sesion.js"></script>
 
 
 	<!-- MAIN JS -->
