--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -30,7 +30,7 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 </head>
-<body onload="getInfoMiSensor(); dibujarGraficaConUltimas5Mediciones()">
+<body onload="getInfoMiSensor(); dibujarGraficaConUltimas5Mediciones(); administrarBarraLateral()">
     <div id="fh5co-page">
     
     <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
@@ -39,11 +39,13 @@
 			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_Verde.png" alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
-                    <li><a href="login.html">Iniciar Sesión</a></li>
-					<li class="fh5co-active"><a href="index.html">Home</a></li>
-					<li><a href="mapa.html">Mapa</a></li>
-					<li><a href="informacion.html">Información</a></li>
-					<li><a href="contacto.html">Contacto</a></li>
+                    <li id="btn_iniciar_sesion"><a href="login.html">Iniciar Sesión</a></li>
+                    <li onclick="cerrarSesion()" id="btn_cerrar_sesion" hidden><a href="#">Cerrar Sesión</a></li>
+                    <li class="fh5co-active"><a href="index.html">Home</a></li>
+                    <li><a href="mapa.html">Mapa</a></li>
+                    <li hidden id="btn_mi_sensor"><a href="miSensor.html">Mi Sensor</a></li>
+                    <li><a href="informacion.html">Información</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
 				</ul>
 			</nav>
 
@@ -157,7 +159,8 @@
 	<script src="js/jquery.waypoints.min.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
-	
+    
+    <script src="js/sesion.js"></script>
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
