--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -85,7 +85,7 @@
                 <div class="caja">
                 <img src="./images/location.png" alt="">
                 <br>
-                <p style="font-weight: 700">Media Estación:</p>
+                <p style="font-weight: 700">Media Sensor:</p>
                     <p id="Media"></p>
                 </div>
             </div>
