Quitados "Elegir intervalo de tiempo" y "Mi sensor" de la barra lateral

--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -91,12 +91,12 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
-					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
+					<!--<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
 						Elegir intervalo de tiempo
 					</a></li>
 					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#myModal" onclick="getInfoMiSensor()">
 						Mi sensor
-					</a></li>
+					</a></li>-->
 					<li><a href="informacion.html">Información</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
