--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -78,7 +78,7 @@
 
 	</head>
 
-<body onload=" administrarBarraLateral(); getMediciones(); markerUbicacion()">
+<body onload=" administrarBarraLateral(); getImagenDelMapa(); markerUbicacion()">
 
 
 
@@ -87,7 +87,7 @@
 		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
 		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
 
-			<h1 id="fh5co-logo"><a href="index.html"><img src="images/logo_Verde.png"
+			<h1 id="fh5co-logo"><a href="index.html"><img width="150px" height="150px" src="images/logo_svg_sinfondo.svg"
 						alt="Free HTML5 Bootstrap Website Template"></a></h1>
 			<nav id="fh5co-main-menu" role="navigation">
 				<ul>
@@ -95,12 +95,8 @@
 					<li onclick="cerrarSesion()" id="btn_cerrar_sesion" hidden><a href="#">Cerrar Sesión</a></li>
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
-					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#intervalModal">
-						Elegir intervalo de tiempo
-					</a></li>
-					<li><a style="font-size: 12px;" href="#" data-toggle="modal" data-target="#myModal" onclick="getInfoMiSensor()">
-						Mi sensor
-					</a></li>
+					<li hidden id="btn_mi_sensor"><a href="miSensor.html">Mi Sensor</a></li>
+
 					<li><a href="informacion.html">Información</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
@@ -366,6 +362,7 @@
 
 		<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-app.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-firestore.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.23.0/firebase-storage.js"></script>
 		<!-- Conectamos con Firestore -->
 
 		<script>
@@ -381,10 +378,11 @@
 		</script>
 		<p><a href="informacion.html" class="btn btn-primary btn-outline">Leer más</a></p>
 
-
+		
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="scripts.js"></script>
 		<script src="js/firebase.js"></script>
+
 
 
 		</div>
