--- a/ClienteWeb/INODOS/miSensor.html
+++ b/ClienteWeb/INODOS/miSensor.html
@@ -77,7 +77,7 @@
     </div>
     <div class="myTabs">
         <input type="radio" id="tabInfo" name="mytabs" checked="checked">
-        <label for="tabInfo">Infomracion Extendida</label>
+        <label for="tabInfo">Información Extendida</label>
         <div class="tab">
         <div class="contenido" id="infoCajitas"> <!-- Esto es el CONTENIDO de la pagina -->
             <div class="primeraColumna">
