--- a/ClienteWeb/INODOS/mapa.html
+++ b/ClienteWeb/INODOS/mapa.html
@@ -96,7 +96,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li class="fh5co-active"><a href="mapa.html">Mapa</a></li>
 					<li hidden id="btn_mi_sensor"><a href="miSensor.html">Mi Sensor</a></li>
-
+					<li onclick="generarInforme()" hidden id="btn_exportar"><a href="#">Exportar informe</a></li>
 					<li><a href="informacion.html">Información</a></li>
 					<li><a href="contacto.html">Contacto</a></li>
 				</ul>
@@ -382,7 +382,7 @@
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 		<script src="scripts.js"></script>
 		<script src="js/firebase.js"></script>
-
+		<script src="js/generarinforme.js"></script>
 
 
 		</div>
