--- a/ClienteWeb/INODOS/informacion.html
+++ b/ClienteWeb/INODOS/informacion.html
@@ -190,9 +190,9 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						<p class="fh5co-lead">El valor actual de 5 µg/m3 (de media diaria) fijado en las Directrices de la OMS para proteger a la población de los efectos nocivos para la salud del NO2 gaseoso no ha cambiado respecto al recomendado en las directrices anteriores.</p>
-						<p class="fh5co-lead">Los datos oscilan entre un valor mínimo de 1μg/m3 y un valor máximo de 18μg/m3</p>
-						<p class="fh5co-lead"><b>5 μg/m3 de media diaria.</b></p>
+						<p class="fh5co-lead">El valor actual de 40 µg/m3 (de media diaria) fijado en las Directrices de la OMS para proteger a la población de los efectos nocivos para la salud del NO2 gaseoso no ha cambiado respecto al recomendado en las directrices anteriores.</p>
+						<p class="fh5co-lead"><b></b>200 μg/m3 de media en 1h<b></b></p>
+						<p class="fh5co-lead"><b>40 μg/m3 de media diaria.</b></p>
 					</div>
 				</div>
 			</div>
